編集ボタン追加

--- a/websns-app/templates/mypage.html
+++ b/websns-app/templates/mypage.html
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="header-nav">
                 <button class="back-btn" onclick="location.href='./'">⬅ 戻る</button>
-                <!-- <button class="edit-btn">編集</button> -->
+                <button class="edit-btn">編集</button>
             </div>
             <div class="user-info">
                 <div class="avatar">
