マイページのユーザー名をtaroから自分で設定したやつが出るようにしました。

--- a/websns-app/templates/mypage.html
+++ b/websns-app/templates/mypage.html
@@ -17,7 +17,7 @@
                 <div class="avatar">
                     <span>T</span>
                 </div>
-                <span class="username">tarou</span>
+                <span class="username">{{ username }}</span>
                 <div class="follow-stats">
                     {% for label, count in follow %}
                     <div class="follow-item">
