--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -2,6 +2,36 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <title>新規登録画面</title>
+  <link rel="stylesheet" href="../static/register.css">
+</head>
+
+  <body>
+  <div class="login-container">
+    <h1>新規登録</h1>
+    <form method="POST" action="/login">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="form-footer"></div>
+      <a href="/login" class="text-blue-600 hover:underline">ログイン</a>
+        <button type="submit">登録</button>
+      </div>
+    </form>
+  </div>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>新規登録画面</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -15,17 +45,22 @@
     <form action="{{ url_for('register') }}" method="post">
       <div class="form-group flex items-center mb-4">
         <label for="username" class="w-1/3 font-bold">ユーザー名:</label>
-        <input type="text" id="username" name="username" class="w-2/3 p-2 border rounded">
+        <input type="text" id="username" name="username" class="w-2/3 p-2 border rounded-full">
+      </div>
+
+      <div class="form-group flex items-center mb-4">
+        <label for="email" class="w-1/3 font-bold">Eメール:</label>
+        <input type="email" id="email" name="email" class="w-2/3 p-2 border rounded-full">
       </div>
 
       <div class="form-group flex items-center mb-6">
         <label for="password" class="w-1/3 font-bold">パスワード:</label>
-        <input type="password" id="password" name="password" class="w-2/3 p-2 border rounded">
+        <input type="password" id="password" name="password" class="w-2/3 p-2 border rounded-full">
       </div>
 
-
       <div class="flex justify-end">
-        <button type="submit" class="submit-button">登録</button>
+        <button type="submit" class="submit-button"><a href="./" class="hover:underline">登録</a>
+    </button>
       </div>
     </form>
 
@@ -35,4 +70,4 @@
   </div>
 
 </body>
-</html>
+</html> -->
