--- a/websns-app/templates/login.html
+++ b/websns-app/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h1>Login</h1>
+    <h1>ログイン</h1>
     <form method="POST" action="/login">
       <div class="form-group">
         <label for="username">Username</label>
@@ -19,7 +19,7 @@
       </div>
       <div class="form-footer"></div>
         <a href="/register">新規登録</a>
-        <button type="submit">登録</button>
+        <button type="submit">ログイン</button>
       </div>
     </form>
   </div>
