--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -34,5 +34,34 @@
     </p>
   </div>
 
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../static/register.css">
+  <title>新規登録</title>
+</head>
+<body>
+  <div class="login-container">
+    <h1>新規登録</h1>
+    <form method="POST" action="/login">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="form-footer"></div>
+        <a href="/register">新規登録</a>
+        <button type="submit">登録</button>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
