--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -58,7 +58,7 @@
         <input type="password" id="password" name="password" required>
       </div>
       <div class="form-footer"></div>
-        <a href="/register">新規登録</a>
+        <a href="/register">ログイン</a>
         <button type="submit">登録</button>
       </div>
     </form>
